--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -23,6 +23,7 @@
 .songText {
 	border: 1px solid #AAA;
 	display: inline-block;
+	min-width: 350px;
 }
 
 .songText, textarea {
@@ -36,7 +37,7 @@
     display: flex;
 }
 
-.stanspose, .delete {
+.songActions button:not(:last-child) {
     margin-right: 3px;
 }
 
